# timelapse-generator

./: .env.example  .gitignore  LICENSE  PROGRESS_METER_FEATURE.md  PROMPT.md  README.md  THUMBNAIL_FEATURE.md  pyproject.toml
scripts/: common_env.sh  copy_img_to_site.sh  copy_img_to_weewx.sh  fetch_spaceweather.sh  move_ftp_images.sh  remove_daylight_images.sh  requirements.txt  setup_schedule.sh  setup_youtube_auth.py  start_ftp_service.sh  stop_ftp_service.sh  sun.py  test.sh  timelapse.sh  timelapse_day.sh  timelapse_night.sh  validate_dependencies.py
src/timelapse_generator/: cli.py
src/timelapse_generator/config/: settings.py  templates.py
src/timelapse_generator/utils/: file_utils.py  logging.py  retry.py
src/timelapse_generator/video/: encoder.py  generator.py
src/timelapse_generator/video/backends/: __init__.py  base.py  ffmpegcv_backend.py  opencv_backend.py  registry.py
src/timelapse_generator/weather/: kp_parser.py  noaa_client.py
src/timelapse_generator/youtube/: metadata.py  uploader.py
tests/: test_backends.py
